[package]
name = "chewing_capi"
description = "The Chewing (酷音) intelligent Zhuyin input method."
license = "LGPL-2.1-or-later"
version = "0.11.0-alpha.7"
rust-version = "1.88"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
chewing = { version = "0.11.0-alpha.7", path = ".." }
env_logger = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
sqlite = ["chewing/sqlite"]
sqlite-bundled = ["sqlite", "chewing/sqlite-bundled"]
