[package]
name = "fuzzer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chewing = { version = "0.11.0-alpha.6", path = ".." }
chewing_capi = { version = "0.11.0-alpha.6", path = "../capi" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
