[package]
name = "fuzzer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chewing = { version = "0.12.0-alpha.1", path = ".." }
chewing_capi = { version = "0.12.0-alpha.1", path = "../capi" }
env_logger = { workspace = true }
log = { workspace = true }
