[package]
name = "chewing-cli"
description = "Tools of the Chewing (酷音) intelligent Zhuyin input method."
license = "LGPL-2.1-or-later"
version = "0.9.1"
edition = "2021"

[dependencies]
anyhow = "1.0.0"
chewing = { version = "0.9.1", path = "..", features = ["sqlite"] }
clap = { version = "4.4.18", features = ["derive"] }
clap_mangen = { version = "0.2.12", optional = true }

[features]
mangen = ["dep:clap_mangen"]
