[package]
name = "chewing-cli"
description = "Tools of the Chewing (酷音) intelligent Zhuyin input method."
license = "LGPL-2.1-or-later"
version = "0.11.0"
edition = "2024"

[dependencies]
anyhow = "1.0.0"
chewing = { version = "0.11.0", path = ".." }
clap = { version = "4.4.18", features = ["derive"] }
env_logger.workspace = true

[dependencies.clap_mangen]
version = "0.2.12"
optional = true

[features]
mangen = ["dep:clap_mangen"]
sqlite = ["chewing/sqlite"]
sqlite-bundled = ["sqlite", "chewing/sqlite-bundled"]
